@@ -1,4 +1,8 @@
 
+2022-01-24  Ron Norman <rjn@inglenet.com>
+
+	* common.c: report if no runtime.cfg was used
+
 2022-01-19  Ron Norman <rjn@inglenet.com>
 
 	* reportio.c: Use cob_move to copy 'literal' into report field
